--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -25,7 +25,7 @@
                 <h1>Metodo de Cramer</h1>
                 <h2> <span class="rotating"></span></h2>
                 <div class="actions">
-                    <a href="#Metodo" class="btn-get-started" [routerLink]="['/matriz']">Iniciar</a>
+                    <a class="btn-get-started" [routerLink]="['/matriz']">Iniciar</a>
 
                 </div>
             </div>
